# engram

./: .gitignore  Cargo.toml  README.md  WARP.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: commit.rs  init.rs  mod.rs  status.rs  verify.rs
src/engram/: chain.rs  draft.rs  mod.rs  summary.rs  worklog.rs
src/templates/: agents.rs  directive.rs  draft.rs  mod.rs  summary.rs  wrapper_cmd.rs  wrapper_sh.rs
src/utils/: fs.rs  hash.rs  mod.rs
tests/: integration_tests.rs
